--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="column">
                 <img src="img/staff-img/developer2.jpg">
                 <details>
-                    <summary>Robert Johnson (CEO))</summary>
+                    <summary>Robert Johnson (CEO)</summary>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis veritatis ea beatae nostrum voluptate temporibus maiores sit autem, facilis vitae.</p>
                 </details>
             </div>
